logic done and game completed

--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whack A Mole : Mario Version</title>
-    <link rel="stylesheet" href="whacamole.css">
-    <script src="whacamole.js"></script>
+    <link rel="stylesheet" href="whackamole.css">
+    <script src="whackamole.js"></script>
 </head>
 <body>
     <h1>Whack a Mole</h1>
     <h2 id="score">0</h2>
-
+    <div id="board">
+        
+    </div>
 </body>
 </html>
