--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whack A Mole : Mario Version</title>
     <link rel="stylesheet" href="whackamole.css">
-    <script src="whackamole.js"></script>
 </head>
 <body>
     <h1>Whack a Mole</h1>
     <h2 id="score">0</h2>
-    <div id="board">
-        
-    </div>
+    <div id="board"></div>
+    <button id="restart"></button>
+    <script src="whackamole.js"></script>
 </body>
 </html>
